--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   auto_size_text: ^3.0.0
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.13.1
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
