--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.13.1
   provider: ^6.1.2
+  url_launcher: ^6.2.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
