--- a/assets/translations.yaml
+++ b/assets/translations.yaml
@@ -998,7 +998,7 @@
     - |
       Everything has two handles, one by which you can carry it, the other by which you cannot. If your brother wrongs you, do not take it by that handle, the handle of his wrong, for you cannot carry it by that, but rather by the other handle—that he is a brother, brought up with you, and then you will take it by the handle that you can carry by.
     - |
-      It is illogical to reason thus, 'I am richer than you, therefore I am superior to yoo', 'I am more eloquent than you, therefore I am superior to you.' It is more logical to reason, 'I am richer than you, therefore my property is superior to yours', 'I am more eloquent than you, therefore my speech is superior to yours.' You are something more than property or speech.
+      It is illogical to reason thus, 'I am richer than you, therefore I am superior to you', 'I am more eloquent than you, therefore I am superior to you.' It is more logical to reason, 'I am richer than you, therefore my property is superior to yours', 'I am more eloquent than you, therefore my speech is superior to yours.' You are something more than property or speech.
     - |
       If a man wash quickly, do not say that he washes badly, but that he washes quickly. If a man drink much wine, do not say that hc drinks badly, but that he drinks much. For till you have decided what judgement prompts him, how do you know that he acts badly? If you do as I say, you will assent to your apprehensive impressions and to none other.
     - |
